--- a/public/css/dadosbancarios.css
+++ b/public/css/dadosbancarios.css
@@ -3,6 +3,12 @@
   padding: 0px;
 }
 
+input {
+-webkit-appearance: none;
+-moz-appearance: none;
+appearance: none;
+}
+
 body {
   background-color: #1e4f6e;
   color: white;
