--- a/views/indicacoes.ejs
+++ b/views/indicacoes.ejs
@@ -19,7 +19,7 @@
     </header>
     <section>
 
-      <form class="form-cadastro">
+      <form method="post" class="form-cadastro">
         <span class="form-header">Cadastro de Indicações</span>
         <label for="cpf">CPF</label>
         <input name="cpf" type="text" placeholder="insera seu cpf" class="form-input" />
