--- a/public/css/login.css
+++ b/public/css/login.css
@@ -76,14 +76,16 @@ nav {
   position: relative;
 }
 
-#opcoes span {
+.opcoes-cadastro {
   position: absolute;
   left: 0px;
+  text-decoration: none;
+  color: white;
   font-size: 1.5rem;
   font-weight: 900;
 }
 
-#opcoes a {
+.opcoes-esqueci-senha {
   position: absolute;
   right: 0px;
   text-decoration: none;
