--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -19,18 +19,18 @@
     </header>
     <section>
 
-      <form class="form-cadastro">
+      <form method="post"  class="form-cadastro">
         <span class="form-header">Cadastro</span>
         <label for="cpf">CPF</label>
-        <input name="cpf" type="text" placeholder="insera seu cpf" class="form-input" />
+        <input name="cpf" type="text" placeholder="insera seu cpf"  class="form-input" />
         <label for="email">EMAIL</label>
-        <input name="email" type="text" placeholder="insera seu email" class="form-input" />
+        <input name="email" type="text" placeholder="insera seu email"  class="form-input" />
         <label for="nome">NOME</label>
-        <input name="nome" type="text" placeholder="insera seu nome" class="form-input" />
+        <input name="nome" type="text" placeholder="insera seu nome"  class="form-input" />
         <label for="celular">CELULAR</label>
-        <input name="celular" type="text" placeholder="insera seu celular" class="form-input" />
+        <input name="celular" type="text" placeholder="insera seu celular"  class="form-input" />
         <label for="senha">SENHA</label>
-        <input name="senha" type="password" placeholder="Senha" class="form-input" />
+        <input name="senha" type="password" placeholder="Senha"  class="form-input" />
         <input type="submit" value="SALVAR" class="button" />
       </form>
     </section>
