--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,27 +11,21 @@ appearance: none;
 
 
 body {
-  background-color: #1e4f6e;
   font-family: 'Roboto', sans-serif;
-  text-align: center;
-  color: white;
-  font-size: 2.5rem;
-  font-weight: 300;
 }
 
 header {
   background-color: #000000;
 }
 
-nav {
-  padding: 2rem;
+.sair {
+  color: rgba(0,0,0,.5);
+  text-decoration: none;
 }
 
-.logo {
-  display: block;
-  margin: auto;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.sair:hover {
+  color: rgba(0,0,0,.7);
+  text-decoration: none;
 }
 
 .form-signin {
@@ -41,69 +35,39 @@ nav {
   margin: auto;
 }
 
-.form-input {
-  display: block;
-  width: 100%;
-  padding: .375rem .75rem;
-  font-size: 2rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: white;
-  background-color: #537d97;
-  border: none;
-  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-}
-
-.form-input::placeholder {
-  color: white;
-  opacity: 0.5;
-  text-align: center;
-}
-
-.form-signin .form-input {
-  margin-bottom: 1.5rem;
-  position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 1.5rem;
+.container {
+  margin-top: 3em;
 }
 
 .form-signin img {
-  margin-bottom: 2rem;
+  margin-bottom: 1em;
 }
 
-#opcoes {
-  position: relative;
+.card-link {
+  margin-bottom: 1em;
 }
 
-.opcoes-cadastro {
-  position: absolute;
-  left: 0px;
-  text-decoration: none;
-  color: white;
-  font-size: 1.5rem;
-  font-weight: 900;
+.text-secundary-color{
+  color: #f1363a;
 }
 
-.opcoes-esqueci-senha {
-  position: absolute;
-  right: 0px;
-  text-decoration: none;
-  color: white;
-  opacity: 0.7;
-  font-size: 1.6rem;
-  font-weight: 400;
-}
-
-.button {
-  margin-top: 6rem;
-  width: 13rem;
-  border-radius: 100px;
-  padding: 0.5rem 1rem;
-  border: none;
-  font-size: 1.5rem;
-  font-weight: 600;
+.bg-secundary-color{
   background-color: #f1363a;
-  color: white;
-  cursor: pointer;
+  border-color: #f1363a;
+}
+
+.bg-secundary-color:hover {
+  background-color: #f1363a;
+  border-color: #f1363a;
+  opacity: 0.75
+}
+
+.brand {
+  text-align: center;
+  display: block;
+  margin: auto;
+  background: black;
+  border-radius: 16px;
+  padding: 1em;
+  max-width: 100%;
 }
