--- a/views/dadosbancarios.ejs
+++ b/views/dadosbancarios.ejs
@@ -2,46 +2,99 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="./css/dadosbancarios.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/dadosbancarios.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
   <title>Dados Bancarios</title>
 </head>
 
-<body>
-  <main>
-    <header>
-      <nav>
-        <a href="/" class="nav-back"><img src="./assets/arrow-left.svg" alt="voltar"></a>
-        <span>Amigo Fit</span>
-      </nav>
-    </header>
-    <section>
+<body class="bg-light">
 
-      <form method="post" class="form-cadastro">
-        <input type="hidden" name="id" value="<%=dados.id%>">
-        <span class="form-header">Dados Bancarios</span>
-        <label for="banco">BANCO</label>
-        <select class="form-input" name="banco">
-        <% for(var i = 0 ; i < bancos.length; i ++) { %>
-          <option value="<%= bancos[i].id %>" <%= dados.banco_codigo == bancos[i].id ? 'selected' : ''%>><%= bancos[i].nome %></option>
-        <% } %>
-        </select>
-        <label for="agencia">AGÊNCIA</label>
-        <input name="agencia" type="text" placeholder="XXXXXX" value="<%= dados.agencia%>"  class="form-input" />
-        <label for="conta">CONTA</label>
-        <input name="conta" type="text" placeholder="XXXXXXXX-X" value="<%= dados.conta%>" class="form-input" />
-        <label for="tpconta">TIPO</label>
-        <select class="form-input" name="tpconta">
-          <option value="CONTA_CORRENTE" <%= dados.tpconta == 'CONTA_CORRENTE' ? 'selected' : ''%>>CONTA CORRENTE</option>
-          <option value="POUPANCA" <%= dados.tpconta == 'POUPANCA' ? 'selected' : ''%>>POUPANCA</option>
-        </select>
-        <input type="submit" value="SALVAR" class="button" />
-      </form>
-    </section>
-  </main>
-  <script src="utils.js" ></script>
+
+  <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow bg-white">
+    <a class="navbar-brand" href="/"> <img src="./assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
+    Amigo <span class="text-secundary-color">Fit</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Dados Bancarios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cadastro">Dados Cadastrais</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/indicacoes">Indicar</a>
+          </li>
+        </ul>
+        <div class="d-inline-block">
+          <a class="sair" href="/logout">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+          </svg>
+          <span>Sair</span>
+          </a>
+        </div>
+      </div>
+
+  </nav>
+
+  <section class="container">
+    <div class="card form-signin" >
+      <div class="card-body">
+        <h2 class="card-title">Dados Bancarios</h2>
+        <form method="post"  onsubmit="ValidaCadastro(window.event);">
+          <input type="hidden" name="id" value="<%=dados.id%>">
+
+          <div class="form-group">
+            <label for="banco">BANCO</label>
+            <select class="form-control" name="banco" id="banco">
+            <% for(var i = 0 ; i < bancos.length; i ++) { %>
+              <option value="<%= bancos[i].id %>" <%= dados.banco_codigo == bancos[i].id ? 'selected' : ''%>><%= bancos[i].nome %></option>
+            <% } %>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="agencia">AGÊNCIA</label>
+            <input name="agencia" type="text" class="form-control" id="agencia" value="<%= dados.agencia%>"  >
+          </div>
+
+          <div class="form-group">
+            <label for="conta">CONTA</label>
+            <input name="conta" type="text" class="form-control" id="conta" value="<%= dados.conta%>" >
+          </div>
+
+          <div class="form-group">
+            <label for="tpconta">TIPO</label>
+            <select class="form-control" name="tpconta" id="tpconta">
+              <option value="CONTA_CORRENTE" <%= dados.tpconta == 'CONTA_CORRENTE' ? 'selected' : ''%>>CONTA CORRENTE</option>
+              <option value="POUPANCA" <%= dados.tpconta == 'POUPANCA' ? 'selected' : ''%>>POUPANCA</option>
+            </select>
+          </div>
+
+
+          <button type="submit" type="button" class="btn btn-primary btn-lg btn-block bg-secundary-color">Salvar</button>
+
+        </form>
+
+      </div>
+    </div>
+
+  </section>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="utils.js"></script>
 </body>
 
 </html>
