--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,68 +2,114 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="./css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
   <title>Home</title>
 </head>
 
-<body>
-  <main>
-    <header>
-      <nav>
-        <a href="/logout" class="nav-logout">Sair</a>
-        <span>Amigo Fit</span>
-        <a href="/dadosbancarios" class="nav-profile">Perfil</a>
-      </nav>
-    </header>
-    <section>
+<body class="bg-light">
 
-      <div class="container">
-        <img src="./assets/logo2.png" alt="logo" class="logo">
-        <img src="./assets/capa.jpg" alt="capa" class="capa">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow bg-white">
+    <a class="navbar-brand" href="/"> <img src="./assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
+    Amigo <span class="text-secundary-color">Fit</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="estatistica">
-          <div class="label-header">Estatísticas</div>
-          <div class="card">
-            <div class="card-label">
-              INDICADOS
-            </div>
-            <div class="card-body">
-              <%= dados.indicados %>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-label">
-              ATIVOS
-            </div>
-            <div class="card-body">
-              <%= dados.ativos %>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-label">
-              INATIVOS
-            </div>
-            <div class="card-body">
-              <%= dados.inativos %>
-            </div>
-          </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/dadosbancarios">Dados Bancarios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cadastro">Dados Cadastrais</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/indicacoes">Indicar</a>
+          </li>
+        </ul>
+        <div class="d-inline-block">
+          <a class="sair" href="/logout">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+          </svg>
+          <span>Sair</span>
+          </a>
         </div>
-
-        <div class="bonus">
-          <div class="label-header">
-            BONUS
-          </div>
-          <div class="bonus-content">
-            <%= dados.bonus %>
-          </div>
-        </div>
-        <a href="/indicacoes" class="button">INDICAR</a>
       </div>
-    </section>
-  </main>
+
+
+
+  </nav>
+
+  <section class="container">
+    <img src="./assets/capa.jpg" class="d-block ml-auto mr-auto mt-4" alt="capa" class="capa">
+    <h2 class="text-center p-3">Estatísticas</h2>
+
+    <div class="estatisticas">
+
+    <div class="row row-cols-2 text-center">
+      <div class="col mb-4">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">INDICADOS</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title"><%= dados.indicados %></h1>
+          </div>
+        </div>
+        </div>
+        <div class="col mb-4">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">ATIVOS</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title"><%= dados.ativos %></h1>
+          </div>
+        </div>
+        </div>
+        <div class="col mb-4">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">INATIVOS</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title"><%= dados.inativos %></h1>
+          </div>
+        </div>
+        </div>
+
+        <div class="col mb-4">
+        <div class="d-block m-auto card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">BONUS</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title"><%= dados.bonus %></h1>
+            </div>
+        </div>
+      </div>
+
+      </div>
+
+    </div>
+
+
+
+
+
+  </section>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
