--- a/views/indicacoes.ejs
+++ b/views/indicacoes.ejs
@@ -2,36 +2,84 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="./css/indicacoes.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/indicacoes.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
   <title>Cadastro de Indicações</title>
 </head>
 
-<body>
-  <main>
-    <header>
-      <nav>
-        <a href="/" class="nav-back"><img src="./assets/arrow-left.svg" alt="voltar"></a>
-        <span>Amigo Fit</span>
-      </nav>
-    </header>
-    <section>
+<body class="bg-light">
 
-      <form method="post" class="form-cadastro">
-        <span class="form-header">Cadastro de Indicações</span>
-        <label for="cpf">CPF</label>
-        <input name="cpf" type="text" placeholder="insera seu cpf" class="form-input" />
-        <label for="nome">NOME</label>
-        <input name="nome" type="text" placeholder="insera seu nome" class="form-input" />
-        <label for="celular">CELULAR</label>
-        <input name="celular" type="text" placeholder="insera seu celular" class="form-input" />
-        <input type="submit" value="SALVAR" class="button" />
-      </form>
-    </section>
-  </main>
-  <script src="utils.js" ></script>
+  <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow bg-white">
+    <a class="navbar-brand" href="/"> <img src="./assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
+    Amigo <span class="text-secundary-color">Fit</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/dadosbancarios">Dados Bancarios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cadastro">Dados Cadastrais</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Indicar</a>
+          </li>
+        </ul>
+        <div class="d-inline-block">
+          <a class="sair" href="/logout">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+          </svg>
+          <span>Sair</span>
+          </a>
+        </div>
+      </div>
+
+  </nav>
+
+  <section class="container">
+    <div class="card form-signin" >
+      <div class="card-body">
+        <h2 class="card-title">Cadastro de Indicações</h2>
+        <form method="post"  onsubmit="ValidaCadastro(window.event);">
+
+          <div class="form-group">
+            <label for="cpf">CPF</label>
+            <input name="cpf" type="cpf" class="form-control" id="cpf" >
+          </div>
+
+          <div class="form-group">
+            <label for="nome">NOME</label>
+            <input name="nome" type="nome" class="form-control" id="nome" >
+          </div>
+
+          <div class="form-group">
+            <label for="celular">CELULAR</label>
+            <input name="celular" type="celular" class="form-control" id="celular" >
+          </div>
+
+          <button type="submit" type="button" class="btn btn-primary btn-lg btn-block bg-secundary-color">Salvar</button>
+
+        </form>
+
+      </div>
+    </div>
+
+  </section>
+
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="utils.js"></script>
 </body>
 
 </html>
