--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,34 +2,51 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="./css/login.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="utf-8">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/login.css">
   <title>Login</title>
 </head>
 
-<body>
+<body class="bg-light">
+
+  <nav class="navbar sticky-top navbar-light shadow bg-white">
+    <a class="navbar-brand" href="/"> <img src="./assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
+    Amigo <span class="text-secundary-color">Fit</span>
+    </a>
+  </nav>
+
   <main>
-    <header>
-      <nav>
-        <span>Amigo Fit</span>
-      </nav>
-    </header>
-    <section>
-      <img src='./assets/logo1.png' alt='logo1' class="logo" />
-      <form method="post" action="/login" class="form-signin">
-        <img src='./assets/logo2.png' alt='logo2' />
-        <input name="username" type="text" placeholder="Email" class="form-input" />
-        <input name="password" type="password" placeholder="Senha" class="form-input" />
-        <div id="opcoes">
-          <a href="/cadastro" class="opcoes-cadastro">Cadastro</a>
-          <a href="#" class="opcoes-esqueci-senha">Esqueci a Senha</a>
+
+    <section class="container">
+      <div class="card form-signin" >
+        <div class="card-body">
+          <img src="./assets/brand.png" class="brand"  alt="planet club" width="243px">
+          <small  class="form-text text-muted text-center">Ainda não se cadastrou? Clique <a href="/cadastro" class="card-link">aqui</a>.</small>
+          <form method="post" action="/login">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email</label>
+              <input name="username" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Senha</label>
+              <input name="password" type="password" class="form-control" id="exampleInputPassword1" aria-describedby="senhaHelp">
+              <small id="senhaHelp" class="form-text text-muted">Esqueceu a senha clique <a href="#" class="card-link">aqui</a>.</small>
+            </div>
+            <button type="submit" type="button" class="btn btn-primary btn-lg btn-block bg-secundary-color">Entrar</button>
+
+          </form>
+
         </div>
-        <input type="submit" value="ENTRAR" class="button" />
-      </form>
+      </div>
+
     </section>
   </main>
-</body>
 
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+</body>
 </html>
