--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
             <a class="nav-link" href="/dadosbancarios">Dados Bancarios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/cadastro">Dados Cadastrais</a>
+            <a class="nav-link" href="/dadospessoais">Dados Cadastrais</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/indicacoes">Indicar</a>
