--- a/views/dadospessoais.ejs
+++ b/views/dadospessoais.ejs
@@ -87,7 +87,8 @@
  
            <div class="form-group">
             <label for="celular">CELULAR</label>
-            <input name="celular" type="text" class="form-control" id="celular" onkeypress="javascript: return EntradaNumerica(event);" 
+            <input name="celular" type="text" class="form-control" id="celular" 
+            onkeypress="javascript: return EntradaNumerica(event);" 
             onfocus="javascript: RemoveMak(event);"
             onblur="javascript: FormatarCelular(event.target);">
             <div class="invalid-feedback">
