--- a/views/indicacoes.ejs
+++ b/views/indicacoes.ejs
@@ -58,21 +58,34 @@
     <div class="card form-signin" >
       <div class="card-body">
         <h2 class="card-title">Cadastro de Indicações</h2>
-        <form method="post"  onsubmit="ValidaCadastro(window.event);">
+        <form method="post"  onsubmit="ValidaIndicacao(window.event);">
 
           <div class="form-group">
             <label for="cpf">CPF</label>
-            <input name="cpf" type="cpf" class="form-control" id="cpf" >
+            <input name="cpf" type="cpf" class="form-control" id="cpf"
+            onkeypress="javascript: return EntradaNumerica(event);"
+            onfocus="javascript: RemoveMak(event);"
+            onblur="javascript: FormatarCPF(event.target);"
+            >
+            <div class="invalid-feedback">
+            </div>               
           </div>
 
           <div class="form-group">
             <label for="nome">NOME</label>
             <input name="nome" type="nome" class="form-control" id="nome" >
+            <div class="invalid-feedback">
+            </div>   
           </div>
 
           <div class="form-group">
             <label for="celular">CELULAR</label>
-            <input name="celular" type="celular" class="form-control" id="celular" >
+            <input name="celular" type="celular" class="form-control" id="celular" 
+            onkeypress="javascript: return EntradaNumerica(event);" 
+            onfocus="javascript: RemoveMak(event);"
+            onblur="javascript: FormatarCelular(event.target);">
+            <div class="invalid-feedback">
+            </div>   
           </div>
 
           <button type="submit" type="button" class="btn btn-primary btn-lg btn-block bg-secundary-color">Salvar</button>
