--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,7 +41,7 @@
             <div class="form-group">
               <label for="exampleInputPassword1">Senha</label>
               <input name="password" type="password" class="form-control" id="exampleInputPassword1" aria-describedby="senhaHelp">
-              <small id="senhaHelp" class="form-text text-muted">Esqueceu a senha clique <a href="#" class="card-link">aqui</a>.</small>
+              <small id="senhaHelp" class="form-text text-muted">Esqueceu a senha clique <a href="#" class="card-link" data-toggle="modal" data-target="#exampleModal">aqui</a>.</small>
             </div>
             <button type="submit" type="button" class="btn btn-primary btn-lg btn-block bg-secundary-color">Entrar</button>
 
@@ -51,6 +51,35 @@
       </div>
 
     </section>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Recuperar Senha</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="recipient-name" class="col-form-label">Email:</label>
+                <input type="email" class="form-control" id="recipient-name" required>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            <button type="button" class="btn btn-primary">Enviar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </main>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
