--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,10 @@ img {
   margin: 0 auto;
 }
 
+iframe{
+  max-width: 100% !important;
+}
+
 @media (max-width: 375px) {
   h4 {
     font-size: 1rem;
