--- a/views/lista.ejs
+++ b/views/lista.ejs
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/indicacoes.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
-  <title>Cadastro de Indicações</title>
+  <link rel="stylesheet" href="/css/dataTables.bootstrap4.min.css">
+  <title>Lista de <%= data.lista %></title>
 </head>
 
 <body class="bg-light">
 
   <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow bg-white">
-    <a class="navbar-brand" href="/"> <img src="./assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
+    <a class="navbar-brand" href="/"> <img src="/assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
     Amigo <span class="text-secundary-color">Fit</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/dadospessoais">Dados Cadastrais</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/indicacoes">Indicar</a>
+          </li>
         </ul>
         <div class="d-inline-block">
           <a class="sair" href="/logout">
@@ -41,63 +45,53 @@
         </div>
       </div>
 
+
+
   </nav>
 
+  <section class="container mt-5">
 
-  <div class="alert alert-danger alert-dismissible fade <%= error ? 'show' : ''  %>" role="alert">
-    <strong>Amigo Fit:</strong> <%= error ? error.message : ""  %>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-   </div>
 
-  <section class="container">
-    <div class="card form-signin" >
-      <div class="card-body">
-        <h2 class="card-title">Cadastro de Indicações</h2>
-        <form method="post"  onsubmit="ValidaIndicacao(window.event);">
+    <table id="example" class="table caption-top">
+      <caption>Lista de indicados</caption>
+      <thead>
+        <tr>
+          <th scope="col">Nome</th>
+          <th scope="col">Telefone</th>
+        </tr>
+      </thead>
+      <tbody>
 
-          <div class="form-group">
-            <label for="cpf">CPF</label>
-            <input name="cpf" type="cpf" class="form-control" id="cpf"
-            onkeypress="javascript: return EntradaNumerica(event);"
-            onfocus="javascript: RemoveMak(event);"
-            onblur="javascript: FormatarCPF(event.target);"
-            >
-            <div class="invalid-feedback">
-            </div>               
-          </div>
+        <% data.dados.forEach(function(user){ %>
 
-          <div class="form-group">
-            <label for="nome">NOME</label>
-            <input name="nome" type="nome" class="form-control" id="nome" >
-            <div class="invalid-feedback">
-            </div>   
-          </div>
 
-          <div class="form-group">
-            <label for="celular">CELULAR</label>
-            <input name="celular" type="celular" class="form-control" id="celular" 
-            onkeypress="javascript: return EntradaNumerica(event);" 
-            onfocus="javascript: RemoveMak(event);"
-            onblur="javascript: FormatarCelular(event.target);">
-            <div class="invalid-feedback">
-            </div>   
-          </div>
+          <tr>
+            <td><%= user.nomeIndicado %></td>
+            <td><%= user.foneIndicado %></td>
+          </tr>
 
-          <button type="submit" type="button" class="btn btn-primary btn-lg btn-block bg-secundary-color">Salvar</button>
+        <% }); %>
 
-        </form>
-
-      </div>
-    </div>
+      </tbody>
+    </table>
 
   </section>
 
 
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <script src="utils.js"></script>
+  <script src="/jquery.dataTables.min.js"></script>  
+  <script src="/dataTables.bootstrap5.min.js"></script>
+
+  <script>
+    $(document).ready(function() {
+      $('#example').DataTable();
+    });
+  </script>
+
+
 </body>
 
 </html>
