--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,7 +41,7 @@
             <div class="form-group">
               <label for="exampleInputPassword1">Senha</label>
               <input name="password" type="password" class="form-control" id="exampleInputPassword1" aria-describedby="senhaHelp">
-              <small id="senhaHelp" class="form-text text-muted">Esqueceu a senha clique <a href="#" class="card-link" data-toggle="modal" data-target="#exampleModal">aqui</a>.</small>
+              <small id="senhaHelp" class="form-text text-muted">Esqueceu a senha clique <a href="#" class="card-link" data-toggle="modal" data-target="#myModal">aqui</a>.</small>
             </div>
             <button type="submit" type="button" class="btn btn-primary btn-lg btn-block bg-secundary-color">Entrar</button>
 
@@ -54,7 +54,7 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
@@ -64,16 +64,17 @@
             </button>
           </div>
           <div class="modal-body">
-            <form>
+            <form id="formESenha">
               <div class="form-group">
                 <label for="recipient-name" class="col-form-label">Email:</label>
                 <input type="email" class="form-control" id="recipient-name" required>
+                <button type="submit" class="d-none" id="btnSubmit"></button>
               </div>
             </form>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-            <button type="button" class="btn btn-primary">Enviar</button>
+            <button type="button" class="btn btn-primary" id="btnEnviar">Enviar</button>
           </div>
         </div>
       </div>
@@ -81,8 +82,8 @@
 
 
   </main>
-
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="login.js"></script>
 </body>
 </html>
