--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
 <body class="bg-light">
 
-  <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow bg-white">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-dark shadow bg-dark">
     <a class="navbar-brand" href="/"> <img src="./assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
     Amigo <span class="text-secundary-color">Fit</span>
     </a>
@@ -45,12 +45,15 @@
 
   </nav>
 
-  <section class="container">
+  <section class="container text-center">
+
+    <img src="./assets/logo4.png"  alt="capa" class="capa" style="width: 50%;margin-top: 2em;">
+
     <div id="player" class="d-block ml-auto mr-auto mt-4">
       <img src="./assets/capa.jpg"  alt="capa" class="capa">
     </div>
     
-    <h2 class="text-center p-3">DashBoard</h2>
+    <h2 class="text-center p-3 text-white">DashBoard</h2>
 
     <div class="estatisticas">
 
@@ -68,7 +71,6 @@
         </div>
         <div class="col-4 mb-4">
         <div class="card mb-4 shadow-sm">
-          <a href="/lista/inativos" style="position: absolute;width: 100%;height: 100%;"></a>
           <a href="/lista/ativos" style="position: absolute;width: 100%;height: 100%;"></a>
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">ATIVOS</h4>
@@ -80,6 +82,7 @@
         </div>
         <div class="col-4 mb-4">
         <div class="card mb-4 shadow-sm">
+          <a href="/lista/inativos" style="position: absolute;width: 100%;height: 100%;"></a>
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">INATIVOS</h4>
           </div>
