--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 
 <body class="bg-light">
 
-  <nav class="navbar sticky-top navbar-light shadow bg-white">
+  <nav class="navbar sticky-top navbar-dark shadow bg-dark">
     <a class="navbar-brand" href="/"> <img src="./assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
     Amigo <span class="text-secundary-color">Fit</span>
     </a>
@@ -31,7 +31,7 @@
     <section class="container">
       <div class="card form-signin" >
         <div class="card-body">
-          <img src="./assets/brand.png" class="brand"  alt="planet club" width="243px">
+          <img src="./assets/logo3.png" class="brand"  alt="planet club" width="243px">
           <small  class="form-text text-muted text-center">Ainda não se cadastrou? Clique <a href="/cadastro" class="card-link">aqui</a>.</small>
           <form method="post" action="/login">
             <div class="form-group">
