--- a/views/dadosbancarios.ejs
+++ b/views/dadosbancarios.ejs
@@ -14,7 +14,7 @@
 <body class="bg-light">
 
 
-  <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow bg-white">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-dark shadow bg-dark">
     <a class="navbar-brand" href="/"> <img src="./assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
     Amigo <span class="text-secundary-color">Fit</span>
     </a>
