--- a/views/lista.ejs
+++ b/views/lista.ejs
@@ -14,7 +14,7 @@
 
 <body class="bg-light">
 
-  <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow bg-white">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-dark shadow bg-dark">
     <a class="navbar-brand" href="/"> <img src="/assets/logo-brand.png" alt="dumbbells with a heart in the middle" height="54px" width="54px">
     Amigo <span class="text-secundary-color">Fit</span>
     </a>
@@ -29,9 +29,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/dadospessoais">Dados Cadastrais</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/indicacoes">Indicar</a>
           </li>
         </ul>
         <div class="d-inline-block">
