--- a/views/indicacoes.ejs
+++ b/views/indicacoes.ejs
@@ -62,7 +62,7 @@
             <input name="cpf" type="cpf" class="form-control" id="cpf"
             onkeypress="javascript: return EntradaNumerica(event);"
             onfocus="javascript: RemoveMak(event);"
-            onblur="javascript: ValidaCPF('<%= data.token %>'); FormatarCPF(event.target); "
+            onblur="javascript: ValidaECPF('<%= data.token %>'); FormatarCPF(event.target); "
             required>
             <div class="invalid-feedback">
             </div>               
