--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,7 +129,7 @@
         player = new YT.Player('player', {
           height: '370',
           width: '600',
-          videoId: 'MrY3je1gMMo',
+          videoId: '<%= video %>',
           playerVars: { 'autoplay': 1, 'controls': 0 },
           events: {
             'onReady': onPlayerReady,
