--- a/views/lista.ejs
+++ b/views/lista.ejs
@@ -48,9 +48,9 @@
 
   <section class="container mt-5">
 
-    <div class="card">
-      <div class="card-body">
-        <table id="example" class="table caption-top">
+    <div class="card bg-dark">
+      <div class="card-body text-white">
+        <table id="example" class="table table-dark caption-top">
           <caption>Lista de indicados</caption>
           <thead>
             <tr>
